disable .navbar-fixed-top on mobile

--- a/client/components/navbar/navbar.styl
+++ b/client/components/navbar/navbar.styl
@@ -1,6 +1,17 @@
 body
   padding-top: 71px
 
+// disable .navbar-fixed-top on mobile
+@media (max-width: 767px) {
+  .navbar-fixed-top
+    position: relative
+    top: auto
+  .navbar-collapse
+    max-height: none
+  body
+    padding-top: 0
+}
+
 .navbar-brand
   height: 50px
   padding: 10px 0
